MODON MRE BPDEV/force-app/main/default/objects/EOI_Range__c/EOI_Range__c.object-meta.xml
<CustomObject>
    <label>EOI Range</label>
    <nameField>
        <displayFormat>EOI Range-{0000}</displayFormat>
        <label>EOI Range Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EOI Ranges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>