MODON MRE BPDEV/force-app/main/default/objects/EOI_Range__c/fields/Applicable_for_Broker__c.field-meta.xml
<CustomField>
    <fullName>Applicable_for_Broker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicable for Broker</label>
    <type>Checkbox</type>
</CustomField>