MODON MRE BPDEV/force-app/main/default/objects/EOI_Range__c/fields/No_of_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bedrooms__c</fullName>
    <label>No of Bedrooms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Bedroom</fullName>
            </value>
            <value>
                <fullName>2 Bedrooms</fullName>
            </value>
            <value>
                <fullName>3 Bedrooms</fullName>
            </value>
            <value>
                <fullName>4 Bedrooms</fullName>
            </value>
            <value>
                <fullName>Pent House</fullName>
            </value>
            <value>
                <fullName>5 Bedrooms</fullName>
            </value>
            <value>
                <fullName>6 Bedrooms</fullName>
            </value>
            <value>
                <fullName>1 BHK</fullName>
                <isActive>false</isActive>
                <label>1 BHK</label>
            </value>
            <value>
                <fullName>2 BHK</fullName>
                <isActive>false</isActive>
                <label>2 BHK</label>
            </value>
            <value>
                <fullName>3 BHK</fullName>
                <isActive>false</isActive>
                <label>3 BHK</label>
            </value>
            <value>
                <fullName>4 BHK</fullName>
                <isActive>false</isActive>
                <label>4 BHK</label>
            </value>
            <value>
                <fullName>5 BHK</fullName>
                <isActive>false</isActive>
                <label>5 BHK</label>
            </value>
            <value>
                <fullName>6 BHK</fullName>
                <isActive>false</isActive>
                <label>6 BHK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>