MODON MRE BPDEV/force-app/main/default/objects/EOI_Range__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phase</label>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>EOI Ranges</relationshipLabel>
    <relationshipName>EOI_Ranges</relationshipName>
    <type>Lookup</type>
</CustomField>