MODON MRE BPDEV/force-app/main/default/objects/EOI_Range__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>EOI Ranges</relationshipLabel>
    <relationshipName>EOI_Ranges</relationshipName>
    <type>Lookup</type>
</CustomField>