MODON MRE BPDEV/force-app/main/default/objects/EOI_Range__c/fields/Show_On__c.field-meta.xml
<CustomField>
    <fullName>Show_On__c</fullName>
    <inlineHelpText>Channels where this EOI Range is visible. Used by the invite microsite to show/hide ranges per record. Leave empty to hide everywhere.</inlineHelpText>
    <label>Show On</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Microsite</fullName>
            </value>
            <value>
                <fullName>Invite Microsite</fullName>
            </value>
            <value>
                <fullName>Broker Portal</fullName>
            </value>
            <value>
                <fullName>Par Typology</fullName>
            </value>
            <value>
                <fullName>DPG</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>