MODON MRE BPDEV/force-app/main/default/objects/EOI_Range__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Town house</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>Townhomes</fullName>
            </value>
            <value>
                <fullName>Mansions</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
                <isActive>false</isActive>
                <label>Townhouse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>