MODON MRE BPDEV/force-app/main/default/objects/EOI_Range__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Phase__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>Show_On__c</columns>
    <columns>No_of_Bedrooms__c</columns>
    <columns>UnitTypologyMRE__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>